Navigation Menu Overlapping problem fixed.

--- a/css/_partials/_navigation.pcss
+++ b/css/_partials/_navigation.pcss
@@ -84,6 +84,7 @@
     ul{
       margin: 0;
       padding: 0 0 0 20px;
+      position: relative;
       li{
         list-style: none;
         a{
@@ -94,9 +95,14 @@
           position: relative;
           max-height: 0;
           opacity: 0;
+          z-index: -1;
           @mixin atnav{
-            max-height: 100%;
+            max-height: 0;
             opacity: 1;
+            a{
+              display: none;
+              overflow: hidden;
+            }
           }
           background: #fff;
           transition: all 300ms ease-in-out;
